overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
 
+html{
+  overflow-x: hidden;
+}
 body{
   font-family: 'Noto Sans KR', sans-serif;
   overflow-x: hidden;
